# Comfyui-WL-MainImageDesign

./: README.md  __init__.py  prompt_nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
prompts/: default_prompt.txt  system_prompt.txt
